<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="282dp"
        android:text="@string/Nazwisko"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="252dp"
        android:text="@string/LiczbaOcen"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/WpiszNazwisko"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="313dp"
        android:layout_height="52dp"
        android:layout_marginTop="252dp"
        android:text="@string/Oceny"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="288dp"
        android:layout_height="41dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/WpiszImie"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="53dp"
        android:layout_height="38dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="333dp"
        android:text="@string/StringImie"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Wpiszoceny"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="191dp"
        android:layout_height="38dp"
        android:layout_marginTop="204dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>